--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ uvicorn = {extras = ["standard"], version = "*"}
 deepface = "*"
 numpy = "*"
 pillow = "*"
+python-multipart = "*"
 
 [dev-packages]
 
